--- a/[KittopiaExports]/Eve.cfg
+++ b/[KittopiaExports]/Eve.cfg
@@ -783,6 +783,10 @@
 		}
 		Ocean
 		{
+			ocean = True
+			oceanColor = 0.266666681,0.243137255,0.305882365,1
+			oceanHeight = 0
+			density = 1.5
 			minLevel = 1
 			maxLevel = 7
 			minDetailDistance = 8
