--- a/[KittopiaExports]/Kerbin.cfg
+++ b/[KittopiaExports]/Kerbin.cfg
@@ -980,7 +980,7 @@
 							name = DesertMountains
 							latDelta = 1
 							latitudeDouble = False
-							lonDelta = 0.4750158085657
+							lonDelta = 0.476008917228375
 							minimumRealHeight = 0
 							noiseBlend = 0.5
 							noiseColor = 0.24626863,0.228674337,0.214408696,1
@@ -1292,7 +1292,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0.506086580622294
+							latDelta = 0.505546780473614
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
@@ -1648,6 +1648,10 @@
 		}
 		Ocean
 		{
+			ocean = True
+			oceanColor = 0.0705882385,0.101960786,0.156862751,1
+			oceanHeight = 0
+			density = 1
 			minLevel = 2
 			maxLevel = 7
 			minDetailDistance = 6
@@ -1677,7 +1681,7 @@
 				displacement = 0.05
 				texDisplacement = -0.31
 				dispFreq = 0.15
-				mix = 0.253479
+				mix = 0.007415771
 				oceanOpacity = 0.5
 				falloffPower = 1.1
 				falloffExp = 2
@@ -1760,7 +1764,7 @@
 				}
 				OceanFX
 				{
-					angle = -0.56866
+					angle = -0.5387893
 					blendA = 0
 					blendB = 0
 					framesPerSecond = 10
@@ -1768,8 +1772,8 @@
 					spaceAltitude = 0
 					spaceSurfaceBlend = 1
 					specColor = 1,1,1,1
-					texBlend = 0.253479
-					txIndex = 3
+					texBlend = 0.007415771
+					txIndex = 2
 					order = 100
 					enabled = True
 					name = OceanFX
