--- a/[KittopiaExports]/Laythe.cfg
+++ b/[KittopiaExports]/Laythe.cfg
@@ -944,6 +944,10 @@
 		}
 		Ocean
 		{
+			ocean = True
+			oceanColor = 0.116715364,0.12626785,0.156716406,1
+			oceanHeight = 0
+			density = 1
 			minLevel = 1
 			maxLevel = 6
 			minDetailDistance = 8
