cloud altitude accounts for landscape

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -25,6 +25,7 @@
 	@OBJECT:HAS[~customResize[>0]]
 	{
 		@altitude *= #$@SigmaDimensions/Resize$
+		@altitude *= #$@SigmaDimensions/landscape$
 		@layerVolume:HAS[#size[*,*]]
 		{
 			@size[0] *= #$@SigmaDimensions/Atmosphere$
