timewarp limits resize fix

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -4,10 +4,7 @@
 	{
 		@Properties
 		{
-			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/Atmosphere$
 			@inverseRotThresholdAltitude *= #$../SigmaDimensions/Atmosphere$
-			
-			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/atmoTopLayer$
 			@inverseRotThresholdAltitude *= #$../SigmaDimensions/atmoTopLayer$
 		}
 	}
@@ -15,8 +12,14 @@
 	{
 		@Properties
 		{
-			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/Resize$
 			@inverseRotThresholdAltitude *= #$../SigmaDimensions/Resize$
+		}
+	}
+	@Body:HAS[@SigmaDimensions:HAS[#Resize[<1]]]
+	{
+		@Properties
+		{
+			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/Resize$
 		}
 	}
 	@Body,*
