--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_Values.cfg
@@ -105,11 +105,13 @@
 						{
 							&alterApparentHeight = 100
 							&alterRealHeight = 100
+							&minimumRealHeight = 0.100000001490116
 						}
 						%Class[Frost]
 						{
 							&alterApparentHeight = 0
 							&alterRealHeight = 0
+							&minimumRealHeight = 0.100000001490116
 						}
 						#Class[Badlands] {}
 						#Class[Craters] {}
