--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -91,9 +91,11 @@
 							// Resize
 							@alterApparentHeight *= #$../../../../../SigmaDimensions/Resize$
 							@alterRealHeight *= #$../../../../../SigmaDimensions/Resize$
+							@minimumRealHeight *= #$../../../../../SigmaDimensions/Resize$
 							// landscape
 							@alterApparentHeight *= #$../../../../../SigmaDimensions/landscape$
 							@alterRealHeight *= #$../../../../../SigmaDimensions/landscape$
+							@minimumRealHeight *= #$../../../../../SigmaDimensions/landscape$
 						}
 					}
 					@scatters,*
