--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -68,6 +68,10 @@
 {
 	%atmoTopLayer = 1
 }
+@SigmaDimensions:HAS[~groundTiling[>0]]:AFTER[SigDim]
+{
+	%groundTiling = 1
+}
 
 // Create SigmaDimensions node in each body
 
