--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -6,48 +6,46 @@
 		{
 			@Material
 			{
+				@atmosphereDepth *= #$../../SigmaDimensions/Resize$
+				
 				// Resize
-				@texTiling *= #$../../SigmaDimensions/Resize$
 				@groundTexStart *= #$../../SigmaDimensions/Resize$
 				@groundTexEnd *= #$../../SigmaDimensions/Resize$
-				@steepTiling *= #$../../SigmaDimensions/Resize$
 				@steepTexStart *= #$../../SigmaDimensions/Resize$
 				@steepTexEnd *= #$../../SigmaDimensions/Resize$
-				@deepMultiFactor *= #$../../SigmaDimensions/Resize$
-				@mainMultiFactor *= #$../../SigmaDimensions/Resize$
-				@highMultiFactor *= #$../../SigmaDimensions/Resize$
-				@snowMultiFactor *= #$../../SigmaDimensions/Resize$
-				@steepNearTiling *= #$../../SigmaDimensions/Resize$
-				@lowNearTiling *= #$../../SigmaDimensions/Resize$
-				@lowMultiFactor *= #$../../SigmaDimensions/Resize$
-				@lowBumpNearTiling *= #$../../SigmaDimensions/Resize$
-				@lowBumpFarTiling *= #$../../SigmaDimensions/Resize$
-				@midNearTiling *= #$../../SigmaDimensions/Resize$
-				@midMultiFactor *= #$../../SigmaDimensions/Resize$
-				@midBumpNearTiling *= #$../../SigmaDimensions/Resize$
-				@midBumpFarTiling *= #$../../SigmaDimensions/Resize$
-				@highNearTiling *= #$../../SigmaDimensions/Resize$
-				@highBumpNearTiling *= #$../../SigmaDimensions/Resize$
-				@highBumpFarTiling *= #$../../SigmaDimensions/Resize$
-				@atmosphereDepth *= #$../../SigmaDimensions/Resize$
 
 				// landscape
 				@groundTexStart *= #$../../SigmaDimensions/landscape$
 				@groundTexEnd *= #$../../SigmaDimensions/landscape$
 				@steepTexStart *= #$../../SigmaDimensions/landscape$
 				@steepTexEnd *= #$../../SigmaDimensions/landscape$
+				
+				// Tiling
+				@texTiling *= #$../../SigmaDimensions/groundTiling$
+				@steepTiling *= #$../../SigmaDimensions/groundTiling$
+				@steepNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@lowNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@lowBumpNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@lowBumpFarTiling *= #$../../SigmaDimensions/groundTiling$
+				@midNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@midBumpNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@midBumpFarTiling *= #$../../SigmaDimensions/groundTiling$
+				@highNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@highBumpNearTiling *= #$../../SigmaDimensions/groundTiling$
+				@highBumpFarTiling *= #$../../SigmaDimensions/groundTiling$
 			}
 			@FallbackMaterial
 			{
 				// Resize
-				@texTiling *= #$../../SigmaDimensions/Resize$
 				@groundTexStart *= #$../../SigmaDimensions/Resize$
 				@groundTexEnd *= #$../../SigmaDimensions/Resize$
-				@multiFactor *= #$../../SigmaDimensions/Resize$
 				
 				// landscape
 				@groundTexStart *= #$../../SigmaDimensions/landscape$
 				@groundTexEnd *= #$../../SigmaDimensions/landscape$
+				
+				// Tiling
+				@texTiling *= #$../../SigmaDimensions/groundTiling$
 			}
 			@Mods
 			{
