changed references and updated to 1.3

--- a/[Source]/SigmaDimensions/SigmaDimensions.csproj
+++ b/[Source]/SigmaDimensions/SigmaDimensions.csproj
@@ -42,27 +42,27 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Sigma-Binary\[Source]\KerbalSpaceProgram\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\[References]\KerbalSpaceProgram\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Kopernicus, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Sigma-Binary\[Source]\Kopernicus\Kopernicus.dll</HintPath>
+      <HintPath>..\..\..\[References]\Kopernicus\Kopernicus.dll</HintPath>
     </Reference>
     <Reference Include="Kopernicus.Components, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Sigma-Binary\[Source]\Kopernicus\Kopernicus.Components.dll</HintPath>
+      <HintPath>..\..\..\[References]\Kopernicus\Kopernicus.Components.dll</HintPath>
     </Reference>
     <Reference Include="Kopernicus.OnDemand, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Sigma-Binary\[Source]\Kopernicus\Kopernicus.OnDemand.dll</HintPath>
+      <HintPath>..\..\..\[References]\Kopernicus\Kopernicus.OnDemand.dll</HintPath>
     </Reference>
     <Reference Include="Kopernicus.Parser, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Sigma-Binary\[Source]\Kopernicus\Kopernicus.Parser.dll</HintPath>
+      <HintPath>..\..\..\[References]\Kopernicus\Kopernicus.Parser.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Sigma-Binary\[Source]\KerbalSpaceProgram\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\[References]\KerbalSpaceProgram\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
