--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -290,6 +290,13 @@
 					@heightEnd *= #$../../../SigmaDimensions/landscape$
 					@heightStart *= #$../../../SigmaDimensions/landscape$
 				}
+				@GroundStretch,*
+				{
+					// Resize
+					@altitude *= #$../../../SigmaDimensions/Resize$
+					// landscape
+					@altitude *= #$../../../SigmaDimensions/landscape$
+				}
 			}
 		}
 	}
