--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Bop/Bop_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Bop/Bop_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 128500000
 		}
 	}
-	@Body:HAS[@Template[Bop]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Bop]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
