--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Dres/Dres_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Dres/Dres_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 40839348203
 		}
 	}
-	@Body:HAS[@Template[Dres]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Dres]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
