--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 20726155264
 		}
 	}
-	@Body:HAS[@Template[Duna]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Duna]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
