--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 90118820000
 		}
 	}
-	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
