--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eve/Eve_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eve/Eve_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 9832684544
 		}
 	}
-	@Body:HAS[@Template[Eve]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Eve]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
