--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Gilly/Gilly_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Gilly/Gilly_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 31500000
 		}
 	}
-	@Body:HAS[@Template[Gilly]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Gilly]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
