--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Ike/Ike_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Ike/Ike_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 3200000
 		}
 	}
-	@Body:HAS[@Template[Ike]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Ike]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
