--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 13599840256
 		}
 	}
-	@Body:HAS[@Template[Kerbin]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Kerbin]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
