--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Laythe/Laythe_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Laythe/Laythe_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 27184000
 		}
 	}
-	@Body:HAS[@Template[Laythe]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Laythe]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
