--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Minmus/Minmus_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Minmus/Minmus_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 47000000
 		}
 	}
-	@Body:HAS[@Template[Minmus]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Minmus]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
