--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Moho/Moho_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Moho/Moho_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 5263138304
 		}
 	}
-	@Body:HAS[@Template[Moho]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Moho]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
