--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Mun/Mun_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Mun/Mun_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 12000000
 		}
 	}
-	@Body:HAS[@Template[Mun]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Mun]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
