--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 179890000
 		}
 	}
-	@Body:HAS[@Template[Pol]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Pol]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
