--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Tylo/Tylo_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Tylo/Tylo_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 68500000
 		}
 	}
-	@Body:HAS[@Template[Tylo]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Tylo]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
