--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Vall/Vall_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Vall/Vall_Values.cfg
@@ -20,7 +20,7 @@
 			&semiMajorAxis = 43152000
 		}
 	}
-	@Body:HAS[@Template[Vall]:HAS[~removeAllPQSMods[True]]]
+	@zBody:HAS[@Template[Vall]:HAS[~removeAllPQSMods[True]]]
 	{
 		%PQS
 		{
