--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -84,7 +84,7 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
-		@SpaceCenter
+		@zSpaceCenter
 		{
 			@radius *= #$../SigmaDimensions/Resize$
 			@heightMapDeformity *= #$../SigmaDimensions/Resize$
@@ -93,7 +93,7 @@
 			@absoluteOffset *= #$../SigmaDimensions/landscape$
 		}
 	}
-	@Body[Kerbin]:HAS[~removePQSmods[*MapDecalTangent*]]
+	@zBody[Kerbin]:HAS[~removePQSmods[*MapDecalTangent*]]
 	{
 		@PQS
 		{
