--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -4,7 +4,6 @@
 {
 	@Body,*
 	{
-		// SCATTER SIZE
 		@SigmaDimensions:HAS[#CustomSoISize[0]]
 		{
 			// Set SphereOfInfluence multiplier
@@ -15,11 +14,10 @@
 			// Set Ring size multiplier
 			@CustomRingSize = #$Rescale$
 		}
+		
+		// ScatterSize and ScatterDensity
 		@SigmaDimensions:HAS[#resizeScatter[0]]
 		{
-			// define PlanetDimensions2[0] = changeScatterSize
-			// define PlanetDimensions2[1] = changeScatterDensity
-			
 			%changeScatterSize = 1
 			%changeScatterDensity = #$Resize$
 			%CheckResize = #$Resize$
@@ -35,9 +33,6 @@
 		}
 		@SigmaDimensions:HAS[#resizeScatter[1],~CheckResize[*]]
 		{
-			// define changeScatterSize = changeScatterSize
-			// define changeScatterDensity = changeScatterDensity
-			
 			%changeScatterSize = #$Resize$
 			%changeScatterDensity = #$Resize$
 			@changeScatterDensity != 2
