--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -19,27 +19,13 @@
 		@SigmaDimensions:HAS[#resizeScatter[0]]
 		{
 			%changeScatterSize = 1
-			%changeScatterDensity = #$Resize$
-			%CheckResize = #$Resize$
+			%changeScatterDensity = 1
 		}
-		@SigmaDimensions:HAS[#CheckResize[>1]]
-		{
-			@changeScatterDensity != 2
-		}
-		@SigmaDimensions:HAS[#CheckResize[<1]]
-		{
-			@changeScatterDensity *= 0.5
-			@changeScatterDensity += 0.5
-		}
-		@SigmaDimensions:HAS[#resizeScatter[1],~CheckResize[*]]
+		@SigmaDimensions:HAS[~resizeScatter[0]]
 		{
 			%changeScatterSize = #$Resize$
 			%changeScatterDensity = #$Resize$
-			@changeScatterDensity != 2
-		}
-		@SigmaDimensions:HAS[#CheckResize[*]]
-		{
-			!CheckResize = DEL
+			@changeScatterDensity != -1
 		}
 	}
 }
