--- a/[Source]/SigmaDimensions/SigmaDimensions.csproj
+++ b/[Source]/SigmaDimensions/SigmaDimensions.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SigmaDimensions.cs" />
     <Compile Include="SigmaDimensionsLoader.cs" />
+    <Compile Include="Version.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
