--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -72,6 +72,10 @@
 {
 	%groundTiling = 1
 }
+@SigmaDimensions:HAS[~lightRange[>0]]:AFTER[SigDim]
+{
+	%lightRange = 1
+}
 
 // Create SigmaDimensions node in each body
 
