--- a/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/applySettings.cfg
@@ -27,5 +27,11 @@
 			%changeScatterDensity = #$Resize$
 			@changeScatterDensity != -1
 		}
+		
+		// Light Rescale
+		@SigmaDimensions
+		{
+			@lightRange *= #$Rescale$
+		}
 	}
 }
