--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -1,29 +1,31 @@
 SigmaDimensions
 {
 	// Base Settings
-
+	
 	Resize = 1
 	Rescale = 1
 	Atmosphere = 1
 	dayLengthMultiplier = 1
-
-
+	
+	
 	// Advanced Settings
-
+	
 	landscape = 1
 	geeASLmultiplier = 1
-
+	
 	resizeScatter = 1
 	resizeBuildings = 0
 	groundTiling = 1
-
+	
 	CustomSoISize = 0
 	CustomRingSize = 0
-
+	
 	atmoASL = 1
 	tempASL = 1
 	atmoTopLayer = 1
 	atmoVisualEffect = 1
-
+	
+	lightRange = 1
+	
 	scanAltitude = 1
 }
