--- a/GameData/Sigma/Dimensions/Configs/ReDimension/lightScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/lightScale.cfg
@@ -10,9 +10,9 @@
 				{
 					@key,* ^= :$: 0 0 0 x:
 					
-					@key,*[0, ] *= #$../../SigmaDimensions/lightRange$
-					@key,*[2, ] /= #$../../SigmaDimensions/lightRange$
-					@key,*[3, ] /= #$../../SigmaDimensions/lightRange$
+					@key,*[0, ] *= #$../../../SigmaDimensions/lightRange$
+					@key,*[2, ] /= #$../../../SigmaDimensions/lightRange$
+					@key,*[3, ] /= #$../../../SigmaDimensions/lightRange$
 					
 					@key,* ^= : 0 0 0 x$: :
 				}
@@ -20,9 +20,9 @@
 				{
 					@key,* ^= :$: 0 0 0 x:
 					
-					@key,*[0, ] *= #$../../SigmaDimensions/lightRange$
-					@key,*[2, ] /= #$../../SigmaDimensions/lightRange$
-					@key,*[3, ] /= #$../../SigmaDimensions/lightRange$
+					@key,*[0, ] *= #$../../../SigmaDimensions/lightRange$
+					@key,*[2, ] /= #$../../../SigmaDimensions/lightRange$
+					@key,*[3, ] /= #$../../../SigmaDimensions/lightRange$
 					
 					@key,* ^= : 0 0 0 x$: :
 				}
@@ -30,9 +30,9 @@
 				{
 					@key,* ^= :$: 0 0 0 x:
 					
-					@key,*[0, ] *= #$../../SigmaDimensions/lightRange$
-					@key,*[2, ] /= #$../../SigmaDimensions/lightRange$
-					@key,*[3, ] /= #$../../SigmaDimensions/lightRange$
+					@key,*[0, ] *= #$../../../SigmaDimensions/lightRange$
+					@key,*[2, ] /= #$../../../SigmaDimensions/lightRange$
+					@key,*[3, ] /= #$../../../SigmaDimensions/lightRange$
 					
 					@key,* ^= : 0 0 0 x$: :
 				}
