--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -84,5 +84,13 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
+		@SpaceCenter
+		{
+			@radius *= #$../SigmaDimensions/Resize$
+			@heightMapDeformity *= #$../SigmaDimensions/Resize$
+			@heightMapDeformity *= #$../SigmaDimensions/landscape$
+			@absoluteOffset *= #$../SigmaDimensions/Resize$
+			@absoluteOffset *= #$../SigmaDimensions/landscape$
+		}
 	}
 }
