other spacecenter fixes

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -84,9 +84,26 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
+	}
+	@Body[Kerbin]:HAS[~removePQSmods[*MapDecalTangent*]]
+	{
 		@SpaceCenter
 		{
-			@radius *= #$../SigmaDimensions/Resize$
+			&radius = 7500
+			&heightMapDeformity = 70
+			&absoluteOffset = 0
+			
+			%Resize = #$../SigmaDimensions/Resize$
+			@Resize /= #$../SigmaDimensions/resizeBuildings$
+		}
+		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.009]]
+		{
+			@Resize = 0.75
+		}
+		@SpaceCenter
+		{
+			@Resize *= #$../SigmaDimensions/resizeBuildings$
+			@radius *= #$Resize$
 			@heightMapDeformity *= #$../SigmaDimensions/Resize$
 			@heightMapDeformity *= #$../SigmaDimensions/landscape$
 			@absoluteOffset *= #$../SigmaDimensions/Resize$
