--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -84,5 +84,20 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
+		@SpaceCenter
+		{
+			&radius = 7500
+			%Resize = #$../SigmaDimensions/Resize$
+			@Resize /= #$../SigmaDimensions/resizeBuildings$
+		}
+		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.009]]
+		{
+			@Resize = 0.75
+		}
+		@SpaceCenter
+		{
+			@Resize *= #$../SigmaDimensions/resizeBuildings$
+			@radius *= #$Resize$
+		}
 	}
 }
