resize clouds and scatterer

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizeClouds.cfg
@@ -1,7 +1,8 @@
 @PQS_MANAGER:FOR[SigDim2]
 {
-	SigmaDimensionsResize = #$@SigmaDimensions/Resize$
+	%SigmaDimensionsResize = #$@SigmaDimensions/Resize$
 }
+
 @PQS_MANAGER:HAS[#SigmaDimensionsResize[>1]]:FOR[SigDim2]
 {
 	@OBJECT:HAS[~customResize[>0]]
@@ -9,17 +10,20 @@
 		@deactivateDistance *= #$@SigmaDimensions/Resize$
 	}
 }
+
 @PQS_MANAGER:FOR[SigDim2]
 {
 	@OBJECT:HAS[#customResize[>0]]
 	{
 		@deactivateDistance *= #$customResize$
-	}	
+	}
 }
+
 @PQS_MANAGER:FOR[SigDim2]
 {
 	!SigmaDimensionsResize = DEL
 }
+
 @EVE_CLOUDS:FOR[SigDim2]
 {
 	@OBJECT:HAS[~customResize[>0]]
@@ -34,6 +38,11 @@
 		{
 			@area[0] *= #$@SigmaDimensions/Atmosphere$
 		}
+		@settings
+		{
+			&_DetailDist = 2E-06
+			@_DetailDist /= #$@SigmaDimensions/Resize$
+		}
 	}
 	@OBJECT:HAS[#customResize[>0]]
 	{
@@ -45,6 +54,11 @@
 		@layerVolume:HAS[#area[*,*]]
 		{
 			@area[0] *= #$../customResize$
+		}
+		@settings
+		{
+			&_DetailDist = 2E-06
+			@_DetailDist /= #$@SigmaDimensions/Resize$
 		}
 	}
 }
