--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleAntennas.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleAntennas.cfg
@@ -5,3 +5,11 @@
         	@antennaPower *= #$@SigmaDimensions/Rescale$
     	}
 }
+
+@CUSTOMBARNKIT:FOR[SigDim2]
+{
+	@TRACKING
+	{
+		@DSNRange[*] *= #$@SigmaDimensions/Rescale$
+	}
+}
