--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setKSCSwitcher.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setKSCSwitcher.cfg
@@ -7,11 +7,9 @@
 			@PQSMod_MapDecalTangent
 			{
 				%Resize = #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/Resize$
-				%landscape = #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/landscape$
+				@Resize /= #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/resizeBuildings$
 				@heightMapDeformity *= 0.9255
 				@absoluteOffset += #$heightMapDeformity$
-				@absoluteOffset *= #$Resize$
-				@absoluteOffset *= #$landscape$
 				@heightMapDeformity = 0
 			}
 			@PQSMod_MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
@@ -24,8 +22,13 @@
 			}
 			@PQSCity
 			{
+				%Resize = #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/Resize$
+				@Resize *= #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/landscape$
+				@Resize /= #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/resizeBuildings$
 				@repositionRadiusOffset = #$../PQSMod_MapDecalTangent/absoluteOffset$
+				@repositionRadiusOffset *= #$Resize$
 				@repositionRadiusOffset -= 18.5
+				@repositionRadiusOffset *= #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/resizeBuildings$
 			}
 		}
 	}
