--- a/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
@@ -12,13 +12,11 @@
 			@removeAtmosphere ^= :R:r:
 			@removeAtmosphere ^= :U:u:
 			@removeAtmosphere ^= :E:e:
-		}
-		@Properties
-		{
-			@tidallyLocked ^= :t:T:
-			@tidallyLocked ^= :R:r:
-			@tidallyLocked ^= :U:u:
-			@tidallyLocked ^= :E:e:
+			
+			@removeOcean ^= :t:T:
+			@removeOcean ^= :R:r:
+			@removeOcean ^= :U:u:
+			@removeOcean ^= :E:e:
 		}
 		@Atmosphere
 		{
@@ -26,37 +24,17 @@
 			@pressureCurveIsNormalized ^= :R:r:
 			@pressureCurveIsNormalized ^= :U:u:
 			@pressureCurveIsNormalized ^= :E:e:
-
+			
 			@temperatureCurveIsNormalized ^= :t:T:
 			@temperatureCurveIsNormalized ^= :R:r:
 			@temperatureCurveIsNormalized ^= :U:u:
 			@temperatureCurveIsNormalized ^= :E:e:
-
+			
 			@addAFG ^= :f:F:
 			@addAFG ^= :A:a:
 			@addAFG ^= :L:l:
 			@addAFG ^= :S:s:
 			@addAFG ^= :E:e:
-		}
-		@PQS
-		{
-			@Mods
-			{
-				@VertexHeightMap,*
-				{
-					@ignorelandscape ^= :t:T:
-					@ignorelandscape ^= :R:r:
-					@ignorelandscape ^= :U:u:
-					@ignorelandscape ^= :E:e:
-				}
-				@VertexHeightOblate,*
-				{
-					@ignorelandscape ^= :t:T:
-					@ignorelandscape ^= :R:r:
-					@ignorelandscape ^= :U:u:
-					@ignorelandscape ^= :E:e:
-				}
-			}
 		}
 	}
 }
