--- a/[Source]/SigmaDimensions/SigmaDimensions.csproj
+++ b/[Source]/SigmaDimensions/SigmaDimensions.csproj
@@ -35,13 +35,13 @@
     <Compile Include="Compatibility.cs" />
     <Compile Include="PQSCityGroupsLoader.cs" />
     <Compile Include="PQSMod_SigmaDimensions.cs" />
-    <Compile Include="SigmaDebugLogger.cs" />
+    <Compile Include="DebugLogger.cs" />
     <Compile Include="SpaceCenterFixer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SigmaDimensions.cs" />
-    <Compile Include="SigmaDimensionsLoader.cs" />
+    <Compile Include="SettingsLoader.cs" />
     <Compile Include="Version.cs" />
-    <Compile Include="NodeRemover.cs" />
+    <Compile Include="UserSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
