edit only enabled atmospheres

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
@@ -35,6 +35,12 @@
 			@addAFG ^= :L:l:
 			@addAFG ^= :S:s:
 			@addAFG ^= :E:e:
+			
+			@enabled ^= :f:F:
+			@enabled ^= :A:a:
+			@enabled ^= :L:l:
+			@enabled ^= :S:s:
+			@enabled ^= :E:e:
 		}
 	}
 }
