--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Duna_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Duna_Atmosphere.cfg
@@ -3,12 +3,9 @@
 	@Body:HAS[@Template[Duna]:HAS[~removeAtmosphere[True]]]
 	{
 		%Atmosphere {}
-		@Atmosphere:HAS[~maxAltitude[*]]
+		@Atmosphere:HAS[~enabled[False]]
 		{
-			maxAltitude = 50000
-		}
-		@Atmosphere
-		{
+			&maxAltitude = 50000
 			&staticPressureASL = 6.755
 			&temperatureSeaLevel = 250
 			
