--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Eve_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Eve_Atmosphere.cfg
@@ -3,12 +3,9 @@
 	@Body:HAS[@Template[Eve]:HAS[~removeAtmosphere[True]]]
 	{
 		%Atmosphere {}
-		@Atmosphere:HAS[~maxAltitude[*]]
+		@Atmosphere:HAS[~enabled[False]]
 		{
-			maxAltitude = 90000
-		}
-		@Atmosphere
-		{
+			&maxAltitude = 90000
 			&staticPressureASL = 506.625
 			&temperatureSeaLevel = 408
 			
