--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Jool_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Jool_Atmosphere.cfg
@@ -3,12 +3,9 @@
 	@Body:HAS[@Template[Jool]:HAS[~removeAtmosphere[True]]]
 	{
 		%Atmosphere {}
-		@Atmosphere:HAS[~maxAltitude[*]]
+		@Atmosphere:HAS[~enabled[False]]
 		{
-			maxAltitude = 200000
-		}
-		@Atmosphere
-		{
+			&maxAltitude = 200000
 			&staticPressureASL = 1519.875
 			&temperatureSeaLevel = 200
 			
