--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Kerbin_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Kerbin_Atmosphere.cfg
@@ -3,12 +3,9 @@
 	@Body:HAS[@Template[Kerbin]:HAS[~removeAtmosphere[True]]]
 	{
 		%Atmosphere {}
-		@Atmosphere:HAS[~maxAltitude[*]]
+		@Atmosphere:HAS[~enabled[False]]
 		{
-			maxAltitude = 70000
-		}
-		@Atmosphere
-		{
+			&maxAltitude = 70000
 			&staticPressureASL = 101.324996948242
 			&temperatureSeaLevel = 287
 			
