--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Sun_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Sun_Atmosphere.cfg
@@ -9,7 +9,7 @@
 	}
 	@Body:HAS[@Template:HAS[#name[Sun],~removeAtmosphere[True]]]
 	{
-		@Atmosphere
+		@Atmosphere:HAS[~enabled[False]]
 		{
 			&maxAltitude = 600000
 			&staticPressureASL = 16
@@ -40,7 +40,7 @@
 				key = 600000 10000 0.06371323 0
 			}
 		}
-		@Atmosphere:HAS[~addAFG[False]]
+		@Atmosphere:HAS[~addAFG[False],~enabled[False]]
 		{
 			%AtmosphereFromGround
 			{
