--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -2,7 +2,7 @@
 {
 	@Body,*
 	{
-		@Atmosphere
+		@Atmosphere:HAS[~enabled[False]]
 		{
 			@maxAltitude *= #$../SigmaDimensions/Atmosphere$
 			@altitude *= #$../SigmaDimensions/Atmosphere$
@@ -58,7 +58,7 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
-		@Atmosphere:HAS[~addAFG[False]]
+		@Atmosphere:HAS[~addAFG[False],~enabled[False]]
 		{
 			@AtmosphereFromGround:HAS[#outerRadius[*]]
 			{
