--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Bop_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Bop_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 544507.428516654
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 24500 24500 24500 40000 60000 80000 100000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
