--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Dres_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Dres_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 34800
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
