--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Duna_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Duna_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 65517.859375
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 12000
