--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Eeloo_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Eeloo_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 19460
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 4000 4000 20000 30000 40000 70000 150000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
