--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Minmus_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Minmus_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 40400
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 3000 3000 6000 12000 24000 48000 60000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
