--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Sun_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Sun_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 432000
 			&inverseRotThresholdAltitude = 600000
 			&timewarpAltitudeLimits = 0 3270000 3270000 6540000 1.308E+07 2.616E+07 5.232E+07 6.54E+07
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
