--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -6,6 +6,14 @@
 		{
 			@inverseRotThresholdAltitude *= #$../SigmaDimensions/Atmosphere$
 			@inverseRotThresholdAltitude *= #$../SigmaDimensions/atmoTopLayer$
+
+			@navballSwitchRadiusMult != 2
+			@navballSwitchRadiusMult /= #$../SigmaDimensions/Resize$
+			@navballSwitchRadiusMult != 0.5
+
+			@navballSwitchRadiusMultLow != 2
+			@navballSwitchRadiusMultLow /= #$../SigmaDimensions/Resize$
+			@navballSwitchRadiusMultLow != 0.5
 		}
 	}
 	@Body:HAS[!Atmosphere]
