--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Gilly_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Gilly_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 28255
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 8000 8000 8000 20000 40000 80000 100000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
