--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Ike_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Ike_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 65517.8621348081
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 5000 5000 10000 25000 50000 100000 200000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
