--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Jool_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Jool_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 36000
 			&inverseRotThresholdAltitude = 220000
 			&timewarpAltitudeLimits = 0 0 15000 60000 150000 300000 600000 1200000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 120000
