--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Laythe_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Laythe_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 52980.8790593796
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 30000 30000 60000 120000 240000 480000 600000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 10000
