--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Pol_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Values/Pol_Values.cfg
@@ -9,6 +9,8 @@
 			&rotationPeriod = 901902.623531173
 			&inverseRotThresholdAltitude = 100000
 			&timewarpAltitudeLimits = 0 5000 5000 5000 8000 12000 30000 90000
+			&navballSwitchRadiusMult = 0.06
+			&navballSwitchRadiusMultLow = 0.055
 			%ScienceValues
 			{
 				&flyingAltitudeThreshold = 18000
