--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -55,6 +55,10 @@
 		@Orbit
 		{
 			@semiMajorAxis *= #$../SigmaDimensions/Rescale$
+			@period != 0.666666666666666
+			@period *= #$../SigmaDimensions/Rescale$
+			@period != 1.5
+			@period /= #$../SigmaDimensions/Resize$
 		}
 		@PostSpawnOrbit
 		{
