--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -8,6 +8,9 @@
 	{
 		@PQS
 		{
+			&minDetailDistance = 8
+			@minDetailDistance /= #$../../SigmaDimensions/Resize$
+			
 			%Mods
 			{
 				#../../SigmaDimensions {}
