fix mm math issues

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/lightScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/lightScale.cfg
@@ -8,6 +8,8 @@
 			{
 				@IntensityCurve
 				{
+					@key,* ^= :	: :
+					
 					@key,* ^= :$: 0 0 0 x:
 					
 					@key,*[0, ] *= #$../../../SigmaDimensions/lightRange$
@@ -18,6 +20,8 @@
 				}
 				@ScaledIntensityCurve
 				{
+					@key,* ^= :	: :
+					
 					@key,* ^= :$: 0 0 0 x:
 					
 					@key,*[0, ] *= #$../../../SigmaDimensions/lightRange$
@@ -28,6 +32,8 @@
 				}
 				@IVAIntensityCurve
 				{
+					@key,* ^= :	: :
+					
 					@key,* ^= :$: 0 0 0 x:
 					
 					@key,*[0, ] *= #$../../../SigmaDimensions/lightRange$
