--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -19,6 +19,8 @@
 			
 			@pressureCurve
 			{
+				@key,* ^= :	: :
+				
 				@key,* ^= :$: 0 0 0 x:
 				
 				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
@@ -34,6 +36,8 @@
 			
 			@temperatureCurve
 			{
+				@key,* ^= :	: :
+				
 				@key,* ^= :$: 0 0 0 x:
 				
 				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
@@ -49,6 +53,8 @@
 			
 			@temperatureSunMultCurve
 			{
+				@key,* ^= :	: :
+				
 				@key,* ^= :$: 0 0 0 x:
 				
 				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
@@ -153,6 +159,8 @@
 			pressureCurveIsNormalized = True
 			@pressureCurve
 			{
+				@key,* ^= :	: :
+				
 				@key,* ^= :$: 0 0 0 x:
 				
 				@key,*[0, ] /= #$../maxAltitude$
