--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -86,6 +86,8 @@
 		{
 			@HazardousOcean,*
 			{
+				@key,* ^= :	: :
+				
 				@key,* ^= :$: 0 0 0 x:
 				@key,*[0, ] *= #$../../SigmaDimensions/Resize$
 				@key,*[2, ] /= #$../../SigmaDimensions/Resize$
