--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -9,7 +9,7 @@
 		@PQS
 		{
 			&minDetailDistance = 8
-			@minDetailDistance /= #$../../SigmaDimensions/Resize$
+			@minDetailDistance /= #$../SigmaDimensions/Resize$
 			
 			%Mods
 			{
